--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="wrapper">
-        <div class="wrapper__conteent">
+        <div class="wrapper__content">
             <header class="header">
               <div class="container header__container">
                 <a href="#" class="logo">
@@ -103,85 +103,75 @@
                 </div>
               </section>
               <section class="news">
-                <div class="news">
-                  <div class="container">
-                    <h2 class="title">Новости и акции</h2>
-                    <ul class="news_list">
-                      <li class="news__item">
-                        <img src="#" alt="newsfoto" class="news__img">
-                        <div class="news__content">
-                          <time class="news__data">Декабрь 2019</time>
-                          <h2 class="news__title">Дешевые путевки на Новый Год!</h2>
-                          <h4 class="news__subtitle">Проведи новый год в Тайланде</h4>
-                        </div>
-                      </li>
-                    </ul>          
-                  </div>
+                <div class="container">
+                  <h2 class="title">Новости акции</h2>
+                  <ul class="news__list">
+                    <li class="news__item">
+                      <img src="" alt="" class="news__bg">
+                      <div class="news__info">
+                        <date class="news__date">Декабрь 2019</date>
+                        <h4 class="news__title">Дешевые путевки на Новый Год!</h4>
+                        <div class="news__text">Проведи новый год в Тайланде</div>
+                      </div>
+                    </li>
+                    <li class="news__item">
+                      <img src="" alt="" class="news__bg">
+                      <div class="news__info">
+                        <date class="news__date">Декабрь 2019</date>
+                        <h4 class="news__title">Акция для серфенгистов!</h4>
+                        <div class="news__text">В сезон больших волн скидка на путевку в Тайланд на остров серфенгистов. Удачного пути!</div>
+                      </div>
+                    </li>
+                  </ul>
                 </div>
-                <li class="news__item">
-                 <img src="#" alt="newsfoto" class="news__img">
-                  <div class="news__content">
-                   <time class="news__data">Декабрь 2019</time>
-                   <h2 class="news__title">Акция для серфенгистов!</h2>
-                   <h4 class="news__subtitle">В сезон больших волн скидка на путевку в Тайланд на остров серфенгистов.
-                    Удачного пути!</h4>
-                  </div>
-                </li>
                 <div class="pagination">
-                  <div class="pagination_info">
+                  <div class="pagination__info">
                     Страница <spam class="pagination_ index">1</spam> из <spam class="pagination_count">7</spam>
                   </div>
-                  <ul class="pagination_list">
-                    <li class="pagination_item">
-                      <spam class="pagination_number">1</spam>
+                  <ul class="pagination__list">
+                    <li class="pagination__item">
+                      <spam class="pagination__number">1</spam>
                     </li>
                     <li class="pagination_item">
-                      <spam class="pagination_number">2</spam>
+                      <spam class="pagination__number">2</spam>
                     </li>
                     <li class="pagination_item">
-                      <spam class="pagination_number">3</spam>
+                      <spam class="pagination__number">3</spam>
                     </li>
                     <li class="pagination_item">
-                      <spam class="pagination_number">4</spam>
+                      <spam class="pagination__number">4</spam>
                     </li>
                     <li class="pagination_item">
-                      <spam class="pagination_number">5</spam>
+                      <spam class="pagination__number">5</spam>
+                    </li>
+                    <li class="pagination__item">
+                      <spam class="pagination__number">6</spam>
                     </li>
                     <li class="pagination_item">
-                      <spam class="pagination_number">6</spam>
-                    </li>
-                    <li class="pagination_item">
-                      <spam class="pagination_number">7</spam>
+                      <spam class="pagination__number">7</spam>
                     </li>
               </section>
-              <section class="about-us">
-                <div class="about-us">
-                  <div class="container">
-                    <ul class="about-us">
-                      <li class="about-us">
-                        <img src="#" alt="about-us" class="about-us__img">
-                        <li class="about-us">
-                          <img src="#" alt="about-us" class="about-us__img">
-                          <div class="about-us__content">
-                            <h3 class="about-us__title">О нас</h3>
-                            <h5 class="about-us__text">Сайт рыбатекст поможет дизайнеру, верстальщику, 
-                              вебмастеру сгенерировать несколько абзацев более менее осмысленного 
-                              текста рыбы на русском языке, а начинающему оратору отточить навык
-                              публичных выступлений в домашних условиях. </h5>
-                              <a href="#" class="button">Подробнее</a>
-                          </div>
-                        </li>
-                      </li>
-                    </ul>
+             <section class="about">
+              <div class="container">
+                <img src="" alt="" class="about__img">
+                <div class="about__content">
+                  <img src="" alt="" class="about__bg">
+                  <div class="about__info">
+                    <h2 class="title title--dark">О нас</h2>
+                    <p class="about__text">
+                      Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных выступлений в домашних условиях.
+                    </p>
+                    <a href="#" class="button">Подробнее</a>
                   </div>
                 </div>
-              </section>
+              </div>
+             </section>
             </main>
         </div>
         <div class="footer">
           <div class="content">
-            <header class="header">
-              <div class="container header__container">
+            <footer class="footer">
+              <div class="container footer__container">
                 <a href="" class="logo">
                   <img src="#" alt="logo" class="logo__img">
                    </a>
@@ -193,18 +183,34 @@
                      </ul>
                   </nav>
                     <ul class="social">
-                      <li class="social_item"><a href="#" class="social-link">Телеграм</a></li>
-                      <li class="social_item"><a href="#" class="social-link">Вконтакте</a></li>
-                      <li class="social_item"><a href="#" class="social-link">Фейсбук</a></li>
-                      <li class="social_item"><a href="#" class="social-link">Инстаграм</a></li>
+                      <li class="social__item">
+                        <a href="#" class="social__link">
+                          <img src="" alt="Телеграм" class="social__img">
+                        </a>
+                      </li>
+                      <li class="social__item">
+                        <a href="#" class="social__link">
+                          <img src="" alt="Вконтакте" class="social__img">
+                        </a>
+                      </li>
+                      <li class="social__item">
+                        <a href="#" class="social__link">
+                          <img src="" alt="Фейсбук" class="social__img">
+                        </a>
+                      </li>
+                      <li class="social__item">
+                        <a href="#" class="social__link">
+                          <img src="" alt="Инстаграм" class="social__img">
+                        </a>
+                      </li>
                     </ul>
                     <address class="contacts">
+                      <div class="contacs__call">Бесплатный звонок по России</div>
                       <a href="tell:+78007003030" class="contacts_phone"> 8 800 700 30 30</a>
-                      <div class="contacs_info">График работы</div>
                     </address>
                 </a>
               </div>
-            </header>
+            </footer>
           </div>
         </div>
     </div> 
